# smkdev-django-public

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README  README.md  pyproject.toml  ruff.toml
bootcamps/01-django-fundamental/: README  route.py
bootcamps/02-django-template/: README
bootcamps/03-django-middleware/: README
bootcamps/04-django-intermediate/: README
bootcamps/05-django-advanced/: README
bootcamps/06-django-querysets/: README
bootcamps/07-django-security/: README
bootcamps/08-tdd-python/: README
bootcamps/09-architectural-pattern/: README
bootcamps/10-deployment-scenario/: README
bootcamps/11-ci-cd/: README
bootcamps/12-background-job/: README
bootcamps/13-containerization/: README
bootcamps/14-cloud-computing-service/: README
bootcamps/15-best-practice/: README
extra/: README.md
extra/core/: README
extra/dependency/: README
extra/design/: README
extra/dsa/: README
extra/feature/: README  async.py  classes.py  concurrency.py
extra/grpc/: README
extra/imperative/: README
extra/rest/: README
extra/scratch/: README
extra/tdd/: README
